adição de novos arquivos

--- a/exercicio.forms.html
+++ b/exercicio.forms.html
@@ -17,7 +17,8 @@
     <br/>
         <label for="senha">Senha</label>
         <input id="senha" type="password"/>
-        <button type="submit">Enviar</button>
+    <br/>
+        <button type="submit">Cadastrar</button>
     </form>
 </body>
 </html>
